# oss-ai-intel

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new-source.md
config/: profile.yaml  settings.yaml  sources.yaml
prompts/: analyst.md
scripts/: install_cron.sh
src/aiintel/: __main__.py  analyst.py  cluster.py  config.py  ledger.py  mail.py  models.py  normalize.py  render.py  run.py  score.py
src/aiintel/collectors/: __init__.py  github_releases.py  hn.py  rss.py
src/aiintel/engines/: __init__.py  claude.py
tests/: test_analyst.py  test_cluster.py  test_collector_github.py  test_collector_hn.py  test_collector_rss.py  test_config.py  test_engines.py  test_ledger.py  test_mail.py  test_normalize.py  test_p1_ops.py  test_p2_pipeline.py  test_render.py  test_run.py  test_scaffold.py  test_score.py
