[project]
name = "ai-intel"
version = "0.1.0"
description = "Personal AI-landscape intelligence system"
requires-python = ">=3.12"
dependencies = ["requests>=2.31", "feedparser>=6.0", "PyYAML>=6.0", "rapidfuzz>=3.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
ai-intel = "aiintel.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiintel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
